kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izvoli-si-simple
  labels:
    app: izvoli-si-simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: izvoli-si-simple
  template:
    metadata:
      labels:
        app: izvoli-si-simple
    spec:
      containers:
        - name: izvoli-si-simple
          image: izvoli-si-simple
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
