kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: izvoli-si
spec:
  selector:
    app: izvoli-si
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
