kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izvoli-si-simple
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - preprosto.izvoli.si
      secretName: izvoli-si-simple-tls
  rules:
    - host: preprosto.izvoli.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: izvoli-si-simple
                port:
                  number: 80
